[kcolorschememanager] Rework and improve auto theme switching

Extract the automatically determined color scheme into a function

Avoid applying the scheme twice on startup

Fix activating the default scheme when system is dark

BUG: 452091